DockerWithK8s/complex/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # add ingress controller based on nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # 어디로 보낼지 결정나면 path 를 / 로 바꿈. 예) server-cluster-ip-service 로 보내기로 결정나면 /api 를 / 로 rewrite.
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service # multi-client 서비스 이름
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service # multi-server 서비스 이름
              servicePort: 5000
